--- a/src/Src/BoardView.fx.yaml
+++ b/src/Src/BoardView.fx.yaml
@@ -802,7 +802,7 @@
 
             "TeamsTasksGroup As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
                 DelayItemLoading: =true
-                Height: =807
+                Height: =856
                 Items: =Players
                 Layout: =Layout.Vertical
                 LoadingSpinner: =LoadingSpinner.Data
@@ -813,7 +813,7 @@
                 Y: =101
                 ZIndex: =113
 
-                Separator3 As rectangle:
+                HDivider As rectangle:
                     Fill: =RGBA(0, 18, 107, 1)
                     Height: =4
                     OnSelect: =Select(Parent)
@@ -821,8 +821,8 @@
                     Y: =Parent.TemplateHeight - Self.Height
                     ZIndex: =5
 
-                Rectangle2 As rectangle:
-                    Height: =Parent.TemplateHeight - Separator3.Height
+                VDivider1 As rectangle:
+                    Height: =Parent.TemplateHeight - HDivider.Height
                     OnSelect: =Select(Parent)
                     Width: =4
                     ZIndex: =6
@@ -1766,6 +1766,13 @@
                         )
                     Y: =92
                     ZIndex: =22
+
+                VDivider2 As rectangle:
+                    Height: =Parent.TemplateHeight - HDivider.Height
+                    OnSelect: =Select(Parent)
+                    Width: =4
+                    X: =1097
+                    ZIndex: =23
 
     Header As group:
         Height: =5
