--- a/src/Src/InstructionsView.fx.yaml
+++ b/src/Src/InstructionsView.fx.yaml
@@ -1,59 +1,4 @@
 InstructionsView As screen:
+    BackgroundImage: =instructions1
     ImagePosition: =ImagePosition.Fill
-
-    area As rectangle:
-        DisplayMode: =DisplayMode.Edit 
-        Height: =679
-        OnSelect: =false 
-        Width: =1204
-        X: =72
-        Y: =27
-        ZIndex: =1
-
-    Label2 As label:
-        Align: =Align.Center
-        Color: =RGBA(255, 255, 255, 1)
-        FontWeight: =FontWeight.Bold
-        Height: =66
-        Size: =35
-        Text: |-
-            ="Instructions
-            "
-        Width: =1123
-        X: =99
-        Y: =40
-        ZIndex: =2
-
-    Star1 As star.star6:
-        Fill: =RGBA(255, 255, 0, 1)
-        Height: =164
-        Width: =164
-        X: =1096
-        Y: =484
-        ZIndex: =3
-
-    Label3 As label:
-        Align: =Align.Justify
-        Color: =RGBA(255, 255, 255, 1)
-        Height: =565
-        Size: =15
-        Text: |-
-            ="1.	At the start of the game, each player’s tasks are placed in the BACKLOG column.
-            2.	Select at least 2 tasks per SPRINT, unless there is only one task left to execute.
-            3.	When the token is placed in the PLANNING box, the tasks to be developed in the sprint must be moved to the ToDo column.
-            4.	When the token is placed in the DAILY box:
-              4.1.	If the box is after a PLANNING box, move the tasks you decide to the In-PROCESS column.
-              4.2.	If the box is NOT after a PLANNING box, add 1 to the task counter in the duration unit and select a Daily type card.
-              4.3.	If the story point is less than or equal to story counter, the task must be moved to the Review column.
-              4.4.	If the task is in the Review column, draw a Daily Revision type card.
-            5.	When the token is placed in the REFINEMENT box, draw a Refinement type card, and update the Story Point of the task.
-            6.	When the token is placed in the REVIEW box:
-              6.1.       If all tasks (Task Cards) are in the COMPLETED column, you can reduce one day from one of the tasks you have in the BACKLOG column.
-              6.2.      If there are tasks in columns other than COMPLETED, they must be returned to the Backlog column, if it is in the REVIEW column, add 1 (+1) to the story counter.
-            7.	When you place the token in the RETROSPECTIVE box, you can add 1 (+1) or subtract 1 (-1) to the story point of any of the tasks in any other player’s Backlog column.
-            8.	If a person who requests or delivers FT already has their tasks completed in SPRINT, this action is omitted."
-        Width: =1013
-        X: =99
-        Y: =106
-        ZIndex: =4
 
