--- a/src/Src/InstructionsView.fx.yaml
+++ b/src/Src/InstructionsView.fx.yaml
@@ -1,4 +1,5 @@
 InstructionsView As screen:
     BackgroundImage: =instructions1
+    Fill: =RGBA(255, 255, 255, 1)
     ImagePosition: =ImagePosition.Fill
 
