--- a/src/Src/BoardView.fx.yaml
+++ b/src/Src/BoardView.fx.yaml
@@ -2301,7 +2301,8 @@
 
         DailyTodoInProcessPlayerName As label:
             Align: =Align.Center
-            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+            Color: =RGBA(255, 255, 255, 1)
+            FontWeight: =FontWeight.Bold
             Height: =35
             OnSelect: =Select(Parent)
             PaddingBottom: =0
@@ -2338,25 +2339,25 @@
 
         PopUpDailyToDoInProcessTasksInProcessGallery As gallery.galleryVertical:
             DelayItemLoading: =true
-            Height: =131
+            Height: =117
             Items: |-
                 =Filter(
                     Tasks,team = ThisItem.id && stage = TaskStageType.IN_PROCESS
                 )
             Layout: =Layout.Vertical
             LoadingSpinner: =LoadingSpinner.Data
-            TemplateSize: =54
+            TemplateSize: =28
             Width: =180
             X: =225
-            Y: =36
+            Y: =50
             ZIndex: =7
 
             InProcessTasksName As label:
                 Height: =33
                 OnSelect: =Select(Parent)
                 Text: =ThisItem.name
-                X: =12
-                Y: =8
+                X: =10
+                Y: =10
                 ZIndex: =1
 
         MoveToDo2InProcessButton As button:
@@ -2385,6 +2386,22 @@
             Y: =76
             ZIndex: =8
 
+        DailyTodoInProcessTitleInProcess As label:
+            Align: =Align.Center
+            Color: =RGBA(255, 255, 255, 1)
+            FontWeight: =FontWeight.Bold
+            Height: =35
+            OnSelect: =Select(Parent)
+            PaddingBottom: =0
+            PaddingLeft: =0
+            PaddingRight: =0
+            PaddingTop: =0
+            Text: ="IN PROGRESS"
+            Width: =180
+            X: =225
+            Y: =10
+            ZIndex: =9
+
     PopUpDailyToDoInProcessContinueButton As button:
         DisplayMode: |-
             =If(
@@ -2397,8 +2414,20 @@
                 DisplayMode.Disabled
             )
         Fill: =RGBA(54, 176, 75, 1)
+        OnSelect: |-
+            =UpdateContext({
+                popUpDailyToDo2InProcessEnable: false
+            })
         Text: ="Continue"
+        Visible: =popUpDailyToDo2InProcessEnable
         X: =622
         Y: =617
         ZIndex: =33
+
+    Button6 As button:
+        OnSelect: =Navigate(WelcomeView,ScreenTransition.Fade);
+        Text: ="RESTART"
+        X: =1180
+        Y: =24
+        ZIndex: =34
 
