--- a/src/Src/InstructionsView.fx.yaml
+++ b/src/Src/InstructionsView.fx.yaml
@@ -3,3 +3,11 @@ InstructionsView As screen:
     Fill: =RGBA(255, 255, 255, 1)
     LoadingSpinnerColor: =
 
+    Icon1 As icon.BackArrow:
+        Color: =RGBA(56, 96, 178, 1)
+        Icon: =Icon.BackArrow
+        OnSelect: =Back(ScreenTransition.CoverRight)
+        X: =152
+        Y: =44
+        ZIndex: =1
+
